# minesweeper

./: .gitignore  CMakeLists.txt  tags
include/: minesweeperhead.hpp
sources/: main.cpp
sources/libminesweeper/: complexity.cpp  init_colors.cpp  koords.cpp  minesfield.cpp  move_at.cpp  set_complexity.cpp
